refactor: restructure monolith into `mehara::prapancha` namespace 📦
- 🛡️ Encapsulate framework logic within the `mehara::prapancha` namespace.
- ⏩ Move orchestration to `prapancha::run()`, delegating `main()` as a forwarding entry point.
- 🗺️ Implement `Router` class with `toHandler` adapter for route registration.
- ⚙️ Add `BaseController` using CRTP for static polymorphism and a `Controller` concept for compile-time contract enforcement.
- 🏗️ Migrate `RootController` to the new modular architecture.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,11 @@
-add_executable(${PROJECT_NAME} main.cpp)
+add_executable(${PROJECT_NAME}
+        main.cpp
+        prapancha.cpp
+        prapancha.h
+        router.cpp
+        router.h
+        controller.cpp
+        controller.h)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
         prapancha::json
