🏗️ feat(domain): establish structural foundation for Models and Identity
- 🆔 Implement BaseModel with 128-bit uuid_t provisioned for UUID v7
- 🛡️ Define 'Model' concept to enforce compile-time interface requirements
- 📄 Add Author and Post value-type structs for domain representation
- 🚦 Integrate declarative static_asserts for Model concept violations
- ⚡ Utilize static constexpr metadata for zero-overhead model identification

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,7 +5,8 @@ add_executable(${PROJECT_NAME}
         router.cpp
         router.h
         controller.cpp
-        controller.h)
+        controller.h
+        model.h)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
         prapancha::json
