🏗️ feat(persistence): implement binary FilePersistence system
Initial implementation of the Prapancha persistence layer using
Policy-Based Design and high-performance binary serialization.

- 📁 Implement FilePersistencePolicy for record-based binary storage
- 🏭 Add PersistenceFactory for configurable, type-safe policy instantiation
- 🛡️ Define PersistencePolicy concept to enforce compile-time contracts
- 🧩 Decouple formatting logic into persistence.cpp to minimize header dependencies and improve build speeds
- 🆔 Implement hex-based UUID-to-filename mapping for filesystem safety
- ⚡ Leverage zero-overhead binary I/O for direct model-to-disk persistence

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,7 +6,9 @@ add_executable(${PROJECT_NAME}
         router.h
         controller.cpp
         controller.h
-        model.h)
+        model.h
+        persistence.cpp
+        persistence.h)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
         prapancha::json
