feat: ✨ implement UUID v7 and generic ModelController
- 🆔 Add UUID class with Version 7 (time-ordered) generation
- 🔢 Implement hex string parsing (from_hex) and lowercase output
- 🏗️ Add ModelController with UUID-based persistence logic
- 🔗 Integrate UUID as primary key for model lookups

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,8 +7,9 @@ add_executable(${PROJECT_NAME}
         controller.cpp
         controller.h
         model.h
-        persistence.cpp
-        persistence.h)
+        persistence.h
+        uuid.cpp
+        uuid.h)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
         prapancha::json
