implement immutable global configuration and CLI parser

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_executable(${PROJECT_NAME}
         codec.h
+        configuration.h
+        configuration.cpp
         controller.cpp
         controller.h
         main.cpp
