feat(security): 🎇 implement Argon2id password hashing
- 📂 Created `security/` directory and `hasher` implementation.
- 🛡️ Utilized OpenSSL 3.x EVP_KDF for Argon2id support.
- 💎 Defined `PasswordBinding` to store salt, hash, version, and cost factors (m, t, p).
- ⏱️ Added constant-time verification using `CRYPTO_memcmp`.
- 🧹 Integrated `OPENSSL_cleanse` for automatic memory cleansing of sensitive buffers.
- 📦 Leveraged anonymous namespaces and RAII for internal implementation safety.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(controller)
 add_subdirectory(policy)
+add_subdirectory(security)
 
 add_executable(${PROJECT_NAME}
         codec.h
@@ -16,6 +17,7 @@ add_executable(${PROJECT_NAME}
         uuid.h
         ${CONTROLLER_SOURCES}
         ${POLICY_SOURCES}
+        ${SECURITY_SOURCES}
 )
 
 target_include_directories(${PROJECT_NAME} PRIVATE
