🎇 lay foundation for identity lifecycle
- ✅ Implemented Registration logic with full persistence.
- ⚙️ Integrated Login controller (credential verification only).
- 🧱 Added Logout and Deregistration controller placeholders.
- 💾 Codec: Implemented JsonCodec for UserIdentity and cryptographic data.
- 🚦 Routing: Configured auth endpoints via BaseController architecture.

--- a/src/controller/CMakeLists.txt
+++ b/src/controller/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(CONTROLLER_SOURCES
         ${CMAKE_CURRENT_SOURCE_DIR}/controller.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/identity.h
 )
 
 set(CONTROLLER_SOURCES ${CONTROLLER_SOURCES} PARENT_SCOPE)
