logging: 📜 add sink infrastructure and Trantor-backed FileSink
Includes IsLogSink concept and source_location aware dispatch logic to be used by Logger frontend.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,6 +16,7 @@ add_executable(${PROJECT_NAME}
         uuid.cpp
         uuid.h
         ${CONTROLLER_SOURCES}
+        ${LOGGING_SOURCES}
         ${POLICY_SOURCES}
         ${SECURITY_SOURCES}
 )
